socializer_admin_react/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: socializer-admin
  name: socializer-admin-react
spec:
  selector:
    matchLabels:
      app: socializer-admin-react
  replicas: 2
  template:
    metadata:
      labels:
        app: socializer-admin-react
    spec:
      containers:
        - name: socializer-admin-react
          image: registry.digitalocean.com/socialzer/socializer_admin_react:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: s-react-port
      imagePullSecrets:
        - name: registry-socialzer
