socializer_admin_react/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: socializer-admin-react
  namespace: socializer-admin
  labels:
    app: socializer-admin-react
spec:
  ports:
    - port: 3000
      name: socializer-admin-react
      targetPort: 3000
  selector:
    app: socializer-admin-react
